--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    <p class="happiness2">सौ.कां. ज्योत्सना<br><span class="inviter"><b>सुपौत्री स्व. श्रीमती कुनणी देवी एवं स्व. श्री मनसुख राम जी जाँगिड़<br>सुपुत्री श्रीमती संतरा देवी एवं श्री दुलीचंद जी जाँगिड़<br>निवासी- ठिमाऊ बड़ी, हाल निवास- पिलानी</b><br></span></p>
 
    <p class="happiness">ननिहाल पक्ष<br><span class="inviter"><b>श्री नागरमल जी (नानाजी)<br> प्रकाश जी, लोकेश जी, सुभाष जी, पवन जी,<br> गोपी जी, प्रमोद जी, पुरुषोत्तम जी (मामाजी)<br>निवासी- सूरजगढ़</b><br></span></p>
-   <p class="happiness">भुआजी-फुफाजी पक्ष<br><span class="inviter"><b>संतोष एवं श्री विनोद कुमार जी<br> मंजु एवं श्री शिव कुमार जी<br>आशीष ,अक्षय, मोहित, रोहित</b><br></span></p>
+   <p class="happiness">बुआजी-फुफाजी पक्ष<br><span class="inviter"><b>संतोष एवं श्री विनोद कुमार जी<br> मंजु एवं श्री शिव कुमार जी<br>आशीष ,अक्षय, मोहित, रोहित</b><br></span></p>
    <p class="happiness">बहन-बहनोईजी<br><span class="inviter"><b>डॉ राधा एवं श्री नवीन जी</b><br></span></p>
    <p class="happiness">विशेष आग्रह<br><span class="inviter"><b>संजय, अवतार, योगेंद्र</b><br></span></p>
 
