--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
    </p>
    <p class="happiness">बाल मनुहार<br><span class="inviter"><b>ट्विंकल, अर्जुन, प्रिंस, चाहत, अवि, मनन, वशिष्ठ</b><br></span>
       </span></p>
-   <p class="happiness">विनीत<br><span class="inviter"><b>श्री सन्त कुमार जाँगिड़<br></b>(प्राचार्य रा.उ.मा.वि. नगरासर)<br><b>ग्राम पो. - बनगोठड़ी कलाँ<br>तहसील- पिलानी<br>जिला - झुंझुनूं (राज.)<br>मो.- 9461105190, 9413642423, 7734042423</b><br></span>
+   <p class="happiness">उत्तराकांक्षी<br><span class="inviter"><b>श्री सन्त कुमार जाँगिड़<br></b>(प्राचार्य रा.उ.मा.वि. नगरासर)<br><b>ग्राम पो. - बनगोठड़ी कलाँ<br>तहसील- पिलानी<br>जिला - झुंझुनूं (राज.)<br>मो.- 9461105190, 9413642423, 7734042423</b><br></span>
    </span></p>
       
    <p class="happiness">स्थान<br>
