--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    <meta name="description" content="|| श्री राम || श्री राम || श्री राम ||">
-   <meta property="og:title" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | राधा संग नवीन" />
+   <meta property="og:title" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | अरुण संग ज्योत्सना" />
    <meta property="og:description" content="|| श्री राम || श्री राम || श्री राम ||" />
    <meta property="og:image"
       content="https://raw.githubusercontent.com/hello-arun/arun-jyotsna/master/assets/img/arun-jyotsna-wedding.png" />
    <meta property="og:site_name" content="Wedding Invitation | 8th June" />
    <meta name="twitter:card" content="summary_large_image">
-   <meta name="twitter:site" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | राधा संग नवीन">
-   <meta name="twitter:title" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | राधा संग नवीन">
+   <meta name="twitter:site" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | अरुण संग ज्योत्सना">
+   <meta name="twitter:title" content="परिणयोत्सव आमंत्रण | 29 अप्रैल 2025 | अरुण संग ज्योत्सना">
    <meta name="twitter:description" content="|| श्री राम || श्री राम || श्री राम ||">
    <meta name="twitter:creator" content="@jangirarun786">
    <meta name="twitter:image"
