--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
    <p class="happiness">ननिहाल पक्ष<br><span class="inviter"><b>श्री नागरमल जी (नानाजी)<br> प्रकाश जी, लोकेश जी, सुभाष जी, पवन जी,<br> गोपी जी, प्रमोद जी, पुरुषोत्तम जी (मामाजी)<br>निवासी- सूरजगढ़</b><br></span></p>
    <p class="happiness">बुआजी-फुफाजी पक्ष<br><span class="inviter"><b>संतोष एवं श्री विनोद कुमार जी<br> मंजु एवं श्री शिव कुमार जी<br>आशीष ,अक्षय, मोहित, रोहित</b><br></span></p>
-   <p class="happiness">बहन-बहनोईजी<br><span class="inviter"><b>डॉ राधा एवं श्री नवीन जी</b><br></span></p>
+   <p class="happiness">बहन-बहनोईजी<br><span class="inviter"><b>डॉ. राधा एवं श्री नवीन जी</b><br></span></p>
    <p class="happiness">विशेष आग्रह<br><span class="inviter"><b>संजय, अवतार, योगेंद्र</b><br></span></p>
 
    <p class="happiness">दर्शनाभिलाषी<br><span class="inviter"><b>प्रहलाद, महावीर, रामसिंह, महेंद्र, उम्मेद, जगराम, हवासिंह, राजेन्द्र,
