--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
    <p class="happiness">दर्शनाभिलाषी<br><span class="inviter"><b>प्रहलाद, महावीर, रामसिंह, महेंद्र, उम्मेद, जगराम, हवासिंह, राजेन्द्र,
             सुरेश, जय कुमार, विजय कुमार, किशोरीलाल, कृष्ण, सुरेन्द्र, ओमप्रकाश, महेश, अनिल, मुकेश, पंकज, अमन, आदित्य, नितिन, श्रेष्ठ, हर्ष, वरुण, <br>एवं समस्त काखवाल परिवार</span>
    </p>
-   <p class="happiness">बाल मनुहार<br><span class="inviter"><b>ट्विंकल, अर्जुन, प्रिंस, चाहत, अवि, मनन, वशिष्ठ</b><br></span>
+   <p class="happiness">बाल मनुहार<br><span class="inviter"><b>ट्विंकल, अर्जुन, प्रिंस, चाहत, अवि, मनन, वशिष्ठ, कोमल, सपना</b><br></span>
       </span></p>
    <p class="happiness">उत्तराकांक्षी<br><span class="inviter"><b>श्री सन्त कुमार जाँगिड़<br></b>(प्राचार्य रा.उ.मा.वि. नगरासर)<br><b>ग्राम पो. - बनगोठड़ी कलाँ<br>तहसील- पिलानी<br>जिला - झुंझुनूं (राज.)<br>मो.- 9461105190, 9413642423, 7734042423</b><br></span>
    </span></p>
